--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@sudobility/entity_client",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "type": "module",
   "description": "Frontend client library for entity/organization management",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
@@ -19,25 +20,32 @@
     "build:cjs-copy": "find dist-cjs -name '*.js' | while read f; do cp \"$f\" \"dist/$(echo \"$f\" | sed 's|dist-cjs/||' | sed 's/.js$/.cjs/')\"; done && rm -rf dist-cjs",
     "clean": "rm -rf dist dist-cjs",
     "typecheck": "bunx tsc --noEmit",
-    "lint": "bunx eslint src --ext .ts,.tsx"
+    "lint": "bunx eslint src",
+    "lint:fix": "bunx eslint src --fix",
+    "format": "bunx prettier --write \"src/**/*.{ts,tsx,js,jsx,json}\"",
+    "test": "bun test"
   },
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0",
     "@tanstack/react-query": "^5.0.0"
   },
   "dependencies": {
-    "@sudobility/types": "^1.9.37"
+    "@sudobility/types": "^1.9.40"
   },
   "devDependencies": {
+    "@eslint/js": "^9.0.0",
+    "@tanstack/react-query": "^5.0.0",
     "@types/bun": "^1.2.8",
     "@types/node": "^24.0.0",
     "@types/react": "^19.0.0",
-    "@tanstack/react-query": "^5.0.0",
-    "react": "^19.0.0",
-    "typescript": "^5.9.3",
-    "eslint": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0"
+    "@typescript-eslint/parser": "^8.0.0",
+    "eslint": "^9.0.0",
+    "eslint-config-prettier": "^10.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "^3.0.0",
+    "react": "^19.0.0",
+    "typescript": "^5.9.3"
   },
   "files": [
     "dist/**/*"
