--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sudobility/entity_client",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "type": "module",
   "description": "Frontend client library for entity/organization management",
   "main": "./dist/index.cjs",
@@ -27,12 +27,11 @@
   },
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0",
-    "@tanstack/react-query": "^5.0.0"
-  },
-  "dependencies": {
+    "@tanstack/react-query": "^5.0.0",
     "@sudobility/types": "^1.9.40"
   },
   "devDependencies": {
+    "@sudobility/types": "^1.9.40",
     "@eslint/js": "^9.0.0",
     "@tanstack/react-query": "^5.0.0",
     "@types/bun": "^1.2.8",
