--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sudobility/entity_client",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "type": "module",
   "description": "Frontend client library for entity/organization management",
   "main": "./dist/index.cjs",
@@ -23,7 +23,8 @@
     "lint": "bunx eslint src",
     "lint:fix": "bunx eslint src --fix",
     "format": "bunx prettier --write \"src/**/*.{ts,tsx,js,jsx,json}\"",
-    "test": "bun test"
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0",
@@ -31,6 +32,7 @@
     "@sudobility/types": "^1.9.43"
   },
   "devDependencies": {
+    "vitest": "^4.0.4",
     "@sudobility/types": "^1.9.43",
     "@eslint/js": "^9.0.0",
     "@tanstack/react-query": "^5.0.0",
