--- a/package.json
+++ b/package.json
@@ -1,30 +1,27 @@
 {
   "name": "@sudobility/entity_client",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "type": "module",
   "description": "Frontend client library for entity/organization management",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
-      "types": "./dist/index.d.ts"
-    }
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "publishConfig": {
+    "access": "public"
   },
+  "files": [
+    "dist/**/*"
+  ],
   "scripts": {
-    "build": "bun run build:esm && bun run build:cjs",
-    "build:esm": "bunx tsc -p tsconfig.esm.json",
-    "build:cjs": "bunx tsc -p tsconfig.cjs.json && bun run build:cjs-copy",
-    "build:cjs-copy": "find dist-cjs -name '*.js' | while read f; do cp \"$f\" \"dist/$(echo \"$f\" | sed 's|dist-cjs/||' | sed 's/.js$/.cjs/')\"; done && rm -rf dist-cjs",
-    "clean": "rm -rf dist dist-cjs",
+    "build": "bunx tsc -p tsconfig.build.json",
+    "build:watch": "bunx tsc --watch",
+    "clean": "rm -rf dist",
+    "prepublishOnly": "bun run clean && bun run build",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "typecheck": "bunx tsc --noEmit",
     "lint": "bunx eslint src",
     "lint:fix": "bunx eslint src --fix",
-    "format": "bunx prettier --write \"src/**/*.{ts,tsx,js,jsx,json}\"",
-    "test": "vitest run",
-    "test:watch": "vitest"
+    "format": "bunx prettier --write \"src/**/*.{ts,tsx,js,jsx,json}\""
   },
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0",
@@ -48,9 +45,6 @@
     "react": "^19.0.0",
     "typescript": "^5.9.3"
   },
-  "files": [
-    "dist/**/*"
-  ],
   "keywords": [
     "entity",
     "organization",
